# ClawPushtomail

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  signature.txt.example
clawmail/: __init__.py  __main__.py  agent.py  config.py  email_handler.py  filters.py  state.py  summarizer.py  telegram.py
scripts/: install.sh
